# round

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  music_library.db
assets/: main.css
src/: app.rs  app_context.rs  audio_controller.rs  audio_controller_command.rs  context_menu.rs  create_playlist_dialog.rs  db.rs  errors.rs  file_browser.rs  main.rs  player.rs  player_playing_state.rs  playlist.rs  playlist_browser.rs  queue_bar.rs  queue_state.rs
