[package]
name = "round"
version = "0.1.0"
authors = ["gabrys zych <gabrielzych.13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
dioxus = { version = "0.7.0", features = [] }
directories = "6.0.0"
rodio = "0.21.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = "1.48.0"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
